# fine_tune_base1

./: .env.example  .gitignore  Makefile  _validate.py  combine.py  export_gguf.py  orchestrate.py  pyproject.toml  requirements.txt  run_inference.py  run_training_wsl.sh  setup.md  test_api.py  test_e2e.py  test_full_pipeline.py  test_init.py  test_pipeline.py
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: merchfine_cicd.yaml
agents/: __init__.py  planner.py  tools.py
api/: __init__.py  app.py  middleware.py
api/routes/: __init__.py  admin.py  feedback.py  forecast.py
config/: eval_thresholds.yaml  guardrails.yaml  litellm_config.yaml  models.yaml  rag.yaml  training.yaml
core/: __init__.py  config.py  events.py  exceptions.py  model_switcher.py  protocols.py  system_init.py  upgrade_planner.py
data/: __init__.py  augmentor.py  pipeline.py  schema.py
data/knowledge_base/: mio_rules.md  seasonal_calendar.md  sku_catalog.txt
data/processed/: eval_v1.0_20260412_141024.jsonl  manifest_v1.0_20260412_140516.json  manifest_v1.0_20260412_140707.json  manifest_v1.0_20260412_140733.json  manifest_v1.0_20260412_141024.json  train.jsonl  train_v1.0_20260412_141024.jsonl
data/raw/: train_merchfine_v1.jsonl
evaluation/: __init__.py  quality_gate.py
evaluation/test_cases/: __init__.py  domain_qa.jsonl
guardrails/: __init__.py  input_guard.py  output_guard.py  pipeline.py
inference/: Modelfile.merchfine  Modelfile.template  __init__.py  cache.py  fallback.py  gateway.py  ollama_manager.py
observability/: __init__.py  dashboard.py  langfuse.py
orchestrator/: __init__.py  pipeline.py
project_context/: MerchFine_Master_Report.md  MerchFine_Project_Report.md  Merchfine_LLMOps_Architecture.md
rag/: __init__.py  indexer.py  query_engine.py  retriever.py
registry/: __init__.py  artifact_store.py  experiment_tracker.py  model_manager.py  schemas.py
tests/: test_pipeline.py  test_system_init.py
training/: __init__.py  callbacks.py  export.py  finetune.py  prompt_templates.py  sweep.py
ui/: app.py
